--- a/products/templates/products/beer_detail.html
+++ b/products/templates/products/beer_detail.html
@@ -61,7 +61,10 @@
                             </div>
                         <div class="col s12 m3">
                             <input type="hidden" name="redirect_url" value="{{ request.path }}">
-                            <button type="submit" class= "truncate btn atc-btn waves-effect waves-light"><i class="material-icons right">add_shopping_cart</i>add to cart</button>
+                            <button type="submit" class= "truncate btn atc-btn waves-effect waves-light">
+                                <p>add to cart</p>
+                                <p><i class="material-icons large">add_shopping_cart</i></p>
+                            </button>
                         </div> 
                     </form>
                 </div>
