--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -71,10 +71,10 @@
                         </p>
                     {% endif %}
                 {% endif %}
-                    <a href="{% url 'view_cart' %}" class="center bd-btn red darken-4 btn-large">
+                    <a href="{% url 'checkout' %}" class="center bd-btn red darken-4 btn-large">
                         <span class="text-uppercase">Checkout</span>
                         <span class="icon">
-                            <i class="material-icons">lock</i>
+                            <i class="material-icons right">lock</i>
                         </span>
                     </a>
                 </div>
