--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,7 @@
       <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
       <script src="{% static 'js/base.js' %}"></script>
+      <script src="https://js.stripe.com/v3/"></script>
       {% endblock %}
 
       {% block extra_js %}
