--- a/checkout/templates/includes/mobile_checkout.html
+++ b/checkout/templates/includes/mobile_checkout.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <div class="row hide-on-med-and-up">
-    <div class="row cart-container">
+    <div class="col s10 offset-s1 cart-container">
         {% if cart_items %}
             <table class="striped">
                 <thead>
@@ -26,7 +26,7 @@
                         <td>{{ beer.beer }}</td>
                         
                         <td class="center-align">
-                            {{ beer.beer.quantity }}                     
+                            {{ beer.quantity }}                     
                         </td>
                         <td>£{{ total | floatformat:2 }}</td>
                     </tr>
@@ -40,13 +40,19 @@
                 <h6 class="right-align">Deliver is free with this order</h6>
             {% endif %}
             <h5 class="right-align">Total = <b>£{{ grand_total | floatformat:2 }}</b></h5>
-        {% else %}                
-            <h4 class="">Your cart is empty.</h4>
-            <a href="{% url 'beers' %}" class="btn large red darken-4">Back to Beer Store</a>
+            <div class="center-align">
+                <a href="{% url 'view_cart' %}" class="btn co-btn">
+                    <i class="material-icons right">shopping_cart</i>
+                    <span>Adjust Cart</span>
+                </a>
+            </div>
         {% endif %}
+        <hr>
     </div>
 
-    <div class="col s12">
+    
+
+    <div class="col s10 offset-s1">
             <p class="text-muted">Please fill out the form below to complete your order</p>
             <form action="{% url 'checkout' %}" method="post" id="payment-form">
                 {% csrf_token %}
@@ -76,23 +82,19 @@
                         {% endif %}
                     </div>
                 </fieldset>
-                <fieldset class="co-fieldset-bottom">
+               <fieldset class="co-fieldset-bottom">
                     <legend class="fieldset-label small black-text">Payment</legend>
                     <div>
                         <!-- A Stripe Element will be inserted here. -->
-                        <div class="" id="card-element"></div>
+                        <div id="card-element"></div>
                         <!-- Used to display form errors. -->
-                        <div class=" red-text" id="card-errors" role="alert"></div>
+                        <div class="red-text" id="card-errors" role="alert"></div>
                         <!-- Pass the stripe client_secret along so the payment intent id can be added to the order -->
                         <input type="hidden" value="{{ client_secret }}" name="client_secret">
                     </div>
                 </fieldset>
 
                 <div class="submit-button center-align">                    
-                    <button href="{% url 'view_cart' %}" class="btn co-btn">
-                        <i class="material_icons right"></i>
-                        <span class="font-weight-bold">Adjust Cart</span>
-                    </button>
                     <button id="submit-button" class="btn co-btn">
                         <span class="font-weight-bold">Complete Order</span>
                         <i class="material-icons right">lock</i>
