--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -3,15 +3,11 @@
 html {
     font-family: 'Piazzolla', sans-serif;
     height: 100%;
+    color: #444;
 }
 
 .cart-image {
     height: 9vh;
-}
-
-nav ul a,
-nav .brand-logo {
-    color: #444;
 }
 
 .row {
@@ -20,8 +16,19 @@ nav .brand-logo {
 
 @media only screen and (min-width: 950px) {
     .checkout-container {
-        border-left: 1px solid #444;
+        border-left: 1px solid rgb(87, 87, 87);
     }
+}
+
+.cos-btn {
+    margin: 2rem 1rem;
+    width: 90%;
+    background-color: #b71c1c;    
+    font-family: 'Piazzolla', sans-serif;
+}
+
+.cos-btn:hover {
+    background-color: #e53935;
 }
 
 .StripeElement,
@@ -104,4 +111,113 @@ form {
 
 nav i, nav [class^="mdi-"], nav [class*="mdi-"], nav i.material-icons {
     color: #444;
+}
+
+.message-container {
+    position: fixed;
+    top: 3rem;
+    right: 1rem;
+    z-index: 999999;
+}
+
+.custom-toast {
+    overflow: visible;
+}
+
+.toast-capper {
+    height: 0.2rem;
+}
+
+i.right {
+    margin-left: 0;
+}
+
+
+.btn-toast-close {
+    padding: 0 0.8rem;
+}
+
+/*--------------------------------------------------------------------------------------------------bootstrap toasts css*/
+
+.toast {
+    -ms-flex-preferred-size:350px;
+    flex-basis:350px;
+    max-width:350px;
+    font-size:.875rem;
+    background-color:rgba(255,255,255,.85);
+    background-clip:padding-box;
+    box-shadow:0 .25rem .75rem rgba(0,0,0,.1);
+    opacity:0;
+}
+
+.toast:not(:last-child) {
+    margin-bottom:.75rem
+}
+
+.toast.showing {
+    opacity:1
+}
+
+.toast.show {
+    display:block;
+    opacity:1
+}
+
+.toast.hide {
+    display:none
+}
+
+.toast-header {
+    display:-ms-flexbox;
+    display:flex;
+    -ms-flex-align:center;
+    align-items:center;
+    padding:.25rem .75rem;
+    color:#6c757d;
+    background-color:rgba(255,255,255,.85);
+    background-clip:padding-box;
+    border-bottom:1px solid rgba(0,0,0,.05);
+    border-top-left-radius:calc(.25rem - 1px);
+    border-top-right-radius:calc(.25rem - 1px)
+}
+
+.toast-body {
+    padding:.75rem
+}
+
+/*--------------------------------------------------------------------------------------------------------------loading--*/
+
+.loading-overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background: rgba(3, 0, 204, 0.144);
+    z-index: 9999;
+}
+
+.loading-spinner {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+    height: 100%;
+}
+
+@keyframes spin {
+    from {
+        transform:rotate(0deg);
+    }
+    to {
+        transform:rotate(360deg);
+    }
+}
+
+.spin {
+  animation-name: spin;
+  animation-duration: 4000ms;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
 }
