--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -16,6 +16,11 @@
 {% endblock %}
 
 {% block content %}
+    <div class="loading-overlay" id="loading-overlay">
+        <div class="loading-spinner">
+            <i class="spin material-icons large">sync</i>
+        </div>
+    </div>
     <div class="container center-align">
         <div class="row">
             <h2 class="header center-align">Checkout</h2>   
@@ -97,7 +102,7 @@
                     {{ order_form.country | as_crispy_field }}
                     <div class="form-check right">
                         {% if user.is_authenticated %}
-                            <label class="form-check-label" for="id-save-info">Save this delivery information to my profile</label>
+                            <label class="form-check-lable" for="id-save-info">Save this delivery information to my profile</label>
                             <input class="form-check-input" type="checkbox" id="id-save-info" name="save-info" checked>
                         {% else %}
                             <label class="form-check-label" for="id-save-info">
@@ -111,11 +116,11 @@
                     <legend class="fieldset-label small black-text">Payment</legend>
                     <div>
                         <!-- A Stripe Element will be inserted here. -->
-                        <div class="" id="card-element"></div>
+                        <div id="card-element"></div>
                         <!-- Used to display form errors. -->
-                        <div class=" red-text" id="card-errors" role="alert"></div>
+                        <div class="red-text" id="card-errors" role="alert"></div>
                         <!-- Pass the stripe client_secret along so the payment intent id can be added to the order -->
-                        <input type="hidden" value="{{ client_secret }}" name="client_secret">
+                        <input type="hidden" value="{{ intent.client_secret }}" name="client_secret">
                     </div>
                 </fieldset>
 
@@ -136,6 +141,7 @@
     </div>
     {% include "includes/mobile_checkout.html" %}
 {% endblock %}
+    
 
 {% block postloadjs %}
     {{ block.super }}
