--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -19,13 +19,184 @@
     <div class="container center-align">
         <div class="row">
             <h2 class="header center-align">Thank You {{ order.full_name }}</h2>   
-            <p>Your order({{ order.order_number }}) has been processed. A confirmation email will be sent to <b>{{ order.email }}</b>.</p>
+            <p>Your order({{ order.order_number }}) has been processed.</p>
+            <p> A confirmation email will be sent to <b>{{ order.email }}</b>.</p>
             <p>Please see your order information below.</p>
             <hr>  
-
         </div>
     </div>
     <div class="row">
-        <div class="col"></div>
-    </div>
+            <div class="col s10 offset-s1 m8 offset-m2">
+                <div class="order-confirmation-wrapper">
+					<div class="row">
+						<div class="col">
+							<h5>Order Info</h5>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col s12 m4">
+							<p><b>Order Number:</b></p>
+						</div>
+						<div class="col s12 m8 right-align">
+							<p>{{ order.order_number }}</p>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col s12 m4">
+							<p><b>Order Date</b></p>
+						</div>
+						<div class="col s12 m8 right-align">
+							<p>{{ order.date }}</p>
+						</div>
+					</div>
+                    <div class="row">
+                        <div class="col"><hr></div>
+                    </div>
+
+					<div class="row">
+						<div class="col">
+							<h5>Order Details:</h5>
+						</div>
+					</div>
+					{% for beer in order.lineitems.all %}
+						<div class="row">
+							<div class="col s12 m8">
+								<p class="small mb-0 text-black font-weight-bold">{{ beer.beer.name }} - {{beer.brewery}}</p>
+							</div>
+							<div class="col s12 m8 right-align">
+								<p>{{ beer.quantity }} @ ${{ beer.beer.price }} each</p>
+							</div>
+						</div>
+					{% endfor %}
+                    <div class="row">
+                        <div class="col"><hr></div>
+                    </div>
+
+					<div class="row">
+						<div class="col">
+							<h5>Delivering To:</h5>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col s12 m4">
+							<p><b>Full Name</b></p>
+						</div>
+						<div class="col s12 m8 right-align">
+							<p class="mb-0">{{ order.full_name }}</p>
+						</div>
+					</div>
+
+					<div class="row">
+						<div class="col s12 m4">
+							<p><b>Address 1</b></p>
+						</div>
+						<div class="col s12 m8 right-align">
+							<p class="mb-0">{{ order.street_address1 }}</p>
+						</div>
+					</div>
+					
+					{% if order.street_address2 %}
+					<div class="row">
+						<div class="col s12 m4">
+							<p><b>Address 2</b></p>
+						</div>
+						<div class="col s12 m8 right-align">
+							<p>{{ order.street_address2 }}</p>
+						</div>
+					</div>
+					{% endif %}
+					
+					{% if order.county %}
+					<div class="row">
+						<div class="col s12 m4">
+							<p><b>County</b></p>
+						</div>
+						<div class="col s12 m8 right-align">
+							<p>{{ order.county }}</p>
+						</div>
+					</div>
+					{% endif %}
+
+					<div class="row">
+						<div class="col s12 m4">
+							<p><b>Town or City</b></p>
+						</div>
+						<div class="col s12 m8 right-align">
+							<p>{{ order.town_or_city }}</p>
+						</div>
+					</div>
+					
+					{% if order.postcode %}
+					<div class="row">
+						<div class="col s12 m4">
+							<p><b>Postal Code</b></p>
+						</div>
+						<div class="col s12 m8 right-align">
+							<p>{{ order.postcode }}</p>
+						</div>
+					</div>
+					{% endif %}
+
+					<div class="row">
+						<div class="col s12 m4">
+							<p><b>Country</b></p>
+						</div>
+						<div class="col s12 m8 right-align">
+							<p>{{ order.country }}</p>
+						</div>
+					</div>
+
+					<div class="row">
+						<div class="col s12 m4">
+							<p><b>Phone Number</b></p>
+						</div>
+						<div class="col s12 m8 right-align">
+							<p class="mb-0">{{ order.phone_number }}</p>
+						</div>
+					</div>
+                    <div class="row">
+                        <div class="col"><hr></div>
+                    </div>
+
+					<div class="row">
+						<div class="col">
+							<h5>Billing Info:</h5>
+						</div>
+					</div>
+
+					<div class="row">
+						<div class="col s12 m4">
+							<p><b>Order Total</b></p>
+						</div>
+						<div class="col s12 m8 right-align">
+							<p>£{{ order.order_total }}</p>
+						</div>
+					</div>
+
+					<div class="row">
+						<div class="col s12 m4">
+							<p><b>Delivery</b></p>
+						</div>
+						<div class="col s12 m8 right-align">
+							<p>£{{ order.delivery_cost }}</p>
+						</div>
+					</div>
+
+					<div class="row">
+						<div class="col s12 m4">
+							<p><b>Grand Total</b></p>
+						</div>
+						<div class="col s12 m8 right-align">
+							<p><b>£{{ order.grand_total }}</b></p>
+						</div>
+					</div>
+                </div>
+                <hr>
+            </div> 
+            <div class="row">
+                <div class="col s10 offset-s1 m4 offset-m4">
+                    <a href="{% url 'beers' %}" class="truncate btn large cos-btn waves-effect waves-light"><i class="material-icons right">store</i>back to store</a>
+                </div>
+            </div>    
+		</div>
 {% endblock %}
