--- a/templates/base.html
+++ b/templates/base.html
@@ -60,7 +60,7 @@
                                 <div>
                                     {% if grand_total %}
                                         <i class="material-icons right">shopping_basket</i>
-                                            £{{ grand_total|floatformat:2 }}
+                                            £{{ grand_total|floatformat:2 }} -
                                         {% else %}
                                         <i class="material-icons">shopping_basket</i>
                                         {% endif %}
