added form caching for checkout

--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -18,7 +18,7 @@
 {% block content %}
     <div class="loading-overlay" id="loading-overlay">
         <div class="loading-spinner">
-            <i class="spin material-icons large">sync</i>
+            <i class="spin material-icons large">refresh</i>
         </div>
     </div>
     <div class="container center-align">
