--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -7,14 +7,6 @@
     <link rel="stylesheet" href="{% static 'checkout/css/checkout.css' %}"/>
 {% endblock %}
 
-{% block page_header %}
-    <div class="container header-container">
-        <div class="row">
-            <div class="col"></div>
-        </div>
-    </div>
-{% endblock %}
-
 {% block content %}
     <div class="container center-align">
         <div class="row">
@@ -58,13 +50,13 @@
 							<h5>Order Details:</h5>
 						</div>
 					</div>
-					{% for beer in order.lineitems.all %}
+					{% for beer in order.lineitems %}
 						<div class="row">
 							<div class="col s12 m8">
-								<p class="small mb-0 text-black font-weight-bold">{{ beer.beer.name }} - {{beer.brewery}}</p>
+								<p class="small mb-0 text-black font-weight-bold">{{ beer.beer }} - {{beer.brewery}}</p>
 							</div>
 							<div class="col s12 m8 right-align">
-								<p>{{ beer.quantity }} @ ${{ beer.beer.price }} each</p>
+								<p>{{ beer.quantity }} @ £{{ beer.beer.price }} each</p>
 							</div>
 						</div>
 					{% endfor %}
