--- a/static/css/base.css
+++ b/static/css/base.css
@@ -10,6 +10,11 @@ html {
     font-family: 'Sansita Swashed', sans-serif;
 }
 
+.container {
+    max-width: 100vw;
+    
+}
+
 .dropdown-content {
     width: 15rem!important; 
     height: inherit!important;
@@ -224,10 +229,6 @@ nav .brand-logo {
     color: #444;
 }
 
-.row {
-    margin: 0;
-}
-
 p {
     line-height: 2rem;
 }
@@ -273,4 +274,23 @@ footer.page-footer {
     .container {
         width: 100%;
     }  
+}
+
+/*---------------------------------------------------------------------------------------------------allauth templates*/
+
+.aa-btn {
+    margin: 0.5rem 1rem;
+    width: 6rem;
+    background-color: #b71c1c;    
+    font-family: 'Piazzolla', sans-serif;
+    color: #fff;
+}
+
+.aa-btn:hover {
+    background-color: #e53935;
+}
+
+.allauth-container {
+    width: 100vw;
+    margin: 0;
 }
