--- a/templates/allauth/account/base.html
+++ b/templates/allauth/account/base.html
@@ -1,1 +1,14 @@
 {% extends "base.html" %}
+
+{% block content %}
+    <div class="container allauth-container">
+        <div class="row">
+            <div class="col s10 offset-s1 m6 offset-m3">
+                <div class="allauth-form-inner">
+                    {% block inner %}
+                    {% endblock %}
+                </div>
+            </div>
+        </div>
+    </div>
+{% endblock %}
