--- a/templates/allauth/account/email_confirm.html
+++ b/templates/allauth/account/email_confirm.html
@@ -6,8 +6,8 @@
 {% block head_title %}{% trans "Confirm E-mail Address" %}{% endblock %}
 
 
-{% block content %}
-<h1>{% trans "Confirm E-mail Address" %}</h1>
+{% block inner %}
+<h2 class="header center">{% trans "Confirm E-mail Address" %}</h2>
 
 {% if confirmation %}
 
