--- a/templates/allauth/base.html
+++ b/templates/allauth/base.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>{% block head_title %}{% endblock %}</title>
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
     {% block extra_head %}
     {% endblock %}
   </head>
