--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -8,13 +8,13 @@
         <div class="section no-pad-bot">
             <div class="container">
                 <br><br>
-                <h1 class="header center red-text text-darken-4">Hits 'n' Hops</h1>
+                <h2 class="header center red-text text-darken-4">Hits 'n' Hops</h2>
                 <div class="row center">
-                    <h5 class="col s12 white-text">A Beer and Vinyl club with new recommendations every month!</h5>
+                    <h6 class="col s12 white-text">A Beer and Vinyl club with new recommendations every month!</h6>
                 </div>
                 <br><br>
                 <div class="row center">
-                    <a href="#" id="membership-button" class="btn-large waves-effect waves-light red darken-4">Join Us!</a>
+                    <a href="#" id="membership-button" class="btn-large waves-effect waves-light large red darken-4">Join Us!</a>
                 </div>
             </div>
         </div>
