--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 {% extends "account/base.html" %}
 
 {% load i18n %}
@@ -6,15 +7,16 @@
 
 {% block inner %}
 <h2 class="header center">{% trans "Sign Out" %}</h2>
+<hr>
 
-<p>{% trans 'Are you sure you want to sign out?' %}</p>
+<p class="center">{% trans 'Are you sure you want to sign out?' %}</p>
 
-<form method="post" action="{% url 'account_logout' %}">
+<form method="post" action="{% url 'account_logout' %}" class="center">
   {% csrf_token %}
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
   {% endif %}
-  <button type="submit">{% trans 'Sign Out' %}</button>
+  <button class="aa-btn" type="submit">{% trans 'Sign Out' %}<i class="material-icons right">exit_to_app</i></button>
 </form>
 
 
