--- a/templates/allauth/account/password_set.html
+++ b/templates/allauth/account/password_set.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 {% extends "account/base.html" %}
 
 {% load i18n %}
@@ -6,10 +7,11 @@
 
 {% block inner %}
     <h2 class="header center">{% trans "Set Password" %}</h2>
+    <hr>
 
-    <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
+    <form method="POST" action="{% url 'account_set_password' %}" class="center password_set">
         {% csrf_token %}
         {{ form.crispy }}
-        <input type="submit" name="action" value="{% trans 'Set Password' %}"/>
+        <input class="center aa-btn" type="submit" name="action" value="{% trans 'Set Password' %}"/>
     </form>
 {% endblock %}
