--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -7,14 +7,6 @@
     <link rel="stylesheet" href="{% static 'profiles/css/profile.css' %}"/>
 {% endblock %}
 
-{% block page_header %}
-    <div class="container header-container">
-        <div class="row">
-            <div class="col"></div>
-        </div>
-    </div>
-{% endblock %}
-
 {% block content %}
     <div class="container center-align">
         <div class="row">
@@ -22,6 +14,7 @@
             <hr>                     
         </div>
     </div>
-    <div class="row profile-container">
+    <div class="center row profile-container">
+        {{ profile }}
     </div>
 {% endblock %}
