--- a/static/css/base.css
+++ b/static/css/base.css
@@ -12,7 +12,7 @@ html {
 
 .container {
     max-width: 100vw;
-    
+    padding: 0 4rem;
 }
 
 .dropdown-content {
@@ -77,26 +77,28 @@ i.right {
 }
 
 .toast.show {
-    display:block;
-    opacity:1
+    display: block;
+    opacity: 1;
+    max-height: 75vh;
+    overflow: overlay;
 }
 
 .toast.hide {
-    display:none
+    display:none;
 }
 
 .toast-header {
-    display:-ms-flexbox;
-    display:flex;
-    -ms-flex-align:center;
-    align-items:center;
-    padding:.25rem .75rem;
-    color:#6c757d;
-    background-color:rgba(255,255,255,.85);
-    background-clip:padding-box;
-    border-bottom:1px solid rgba(0,0,0,.05);
-    border-top-left-radius:calc(.25rem - 1px);
-    border-top-right-radius:calc(.25rem - 1px)
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-align: center;
+    align-items: center;
+    padding: .25rem .75rem;
+    color: #6c757d;
+    background-color: inherit;
+    background-clip: padding-box;
+    border-bottom: 1px solid rgba(0,0,0,.05);
+    border-top-left-radius: calc(.25rem - 1px);
+    border-top-right-radius: calc(.25rem - 1px)
 }
 
 .toast-body {
@@ -266,7 +268,7 @@ p {
     font-size: inherit;
 }
 
-footer.page-footer {
+footer .page-footer {
     margin: 0;
 }
 
@@ -280,17 +282,21 @@ footer.page-footer {
 
 .aa-btn {
     margin: 0.5rem 1rem;
-    width: 6rem;
-    background-color: #b71c1c;    
+    width: 80%;
+    background-color: #b71c1c;
     font-family: 'Piazzolla', sans-serif;
     color: #fff;
+    border: none;
+    height: 2rem;
+    line-height: 1.75;
 }
 
 .aa-btn:hover {
     background-color: #e53935;
 }
 
-.allauth-container {
+.container.allauth-container {
     width: 100vw;
     margin: 0;
+    padding: 0;
 }
