--- a/templates/allauth/account/account_inactive.html
+++ b/templates/allauth/account/account_inactive.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 {% extends "account/base.html" %}
 
 {% load i18n %}
@@ -6,6 +7,7 @@
 
 {% block inner %}
 <h2 class="header center">{% trans "Account Inactive" %}</h2>
+<hr>
 
 <p>{% trans "This account is inactive." %}</p>
 {% endblock %}
