--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 {% extends "account/base.html" %}
 
 {% load i18n %}
@@ -36,14 +37,17 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
 <form class="login" method="POST" action="{% url 'account_login' %}">
   {% csrf_token %}
   {{ form|crispy }}
-  {% if redirect_field_value %}
-  <input type="checkbox" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-  {% endif %}
   <p class="center">
-    <a class="primaryAction center aa-btn" type="submit">{% trans "Sign In" %}<i class="material-icons right">check</i></a>
+    <button class="primaryAction center aa-btn" type="submit">{% trans "Sign In" %}<i class="material-icons right">check</i></button>
   </p>
   <p>
-    <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
+    {% if redirect_field_value %}
+    <label>
+        <input type="checkbox" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+        <span>Remember Me</span>
+    </label>
+    {% endif %}
+    <a class="button right secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
   </p>
 </form>
 
