--- a/templates/allauth/account/password_change.html
+++ b/templates/allauth/account/password_change.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 {% extends "account/base.html" %}
 
 {% load i18n %}
@@ -6,10 +7,11 @@
 
 {% block inner %}
     <h2 class="header center">{% trans "Change Password" %}</h2>
+    <hr>
 
-    <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
+    <form method="POST" action="{% url 'account_change_password' %}" class="password_change center">
         {% csrf_token %}
         {{ form|crispy }}
-        <button type="submit" name="action">{% trans "Change Password" %}</button>
+        <button class="aa-btn" type="submit" name="action">{% trans "Change Password" %}<i class="material-icons right">edit</i></button>
     </form>
 {% endblock %}
