--- a/templates/allauth/account/password_reset.html
+++ b/templates/allauth/account/password_reset.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 {% extends "account/base.html" %}
 
 {% load i18n %}
@@ -8,16 +9,17 @@
 {% block inner %}
 
     <h2 class="header center">{% trans "Password Reset" %}</h2>
+    <hr>
     {% if user.is_authenticated %}
     {% include "account/snippets/already_logged_in.html" %}
     {% endif %}
 
-    <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
+    <p class="center">{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
 
-    <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
+    <form method="POST" action="{% url 'account_reset_password' %}" class="center password_reset">
         {% csrf_token %}
         {{ form|crispy }}
-        <input type="submit" value="{% trans 'Reset My Password' %}" />
+        <input class="center aa-btn" type="submit" value="{% trans 'Reset My Password' %}" />
     </form>
 
     <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
