--- a/templates/allauth/account/password_reset_from_key_done.html
+++ b/templates/allauth/account/password_reset_from_key_done.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 {% extends "account/base.html" %}
 
 {% load i18n %}
@@ -5,5 +6,6 @@
 
 {% block inner %}
     <h2 class="header center">{% trans "Change Password" %}</h2>
-    <p>{% trans 'Your password is now changed.' %}</p>
+    <hr>
+    <p class="center">{% trans 'Your password is now changed.' %}</p>
 {% endblock %}
