--- a/templates/allauth/account/signup_closed.html
+++ b/templates/allauth/account/signup_closed.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 {% extends "account/base.html" %}
 
 {% load i18n %}
@@ -6,6 +7,7 @@
 
 {% block inner %}
 <h2 class="header center">{% trans "Sign Up Closed" %}</h2>
+<hr>
 
-<p>{% trans "We are sorry, but the sign up is currently closed." %}</p>
+<p class="center">{% trans "We are sorry, but the sign up is currently closed." %}</p>
 {% endblock %}
