--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -64,7 +64,7 @@
                     {% else %}
                     <b><h6 class="black-text">
                         Total
-                    <span class="right"><b>£{{ total|floatformat:2 }}</b></span>
+                    <span class="right"><b>£{{ grand_total|floatformat:2 }}</b></span>
                     </h6></b>
                         <p class="blue-text text-darken-4 center-align">
                             Free delivery on this order!
