created records app, models, view and urls

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -56,7 +56,7 @@
                         <h5 class="center header red-text text-darken-4">Discuss Your Favourites</h5>
 
                         <p class="light">Chat to friends about all things beer and music. Use our forums or
-                                or listening party service to discover, dance and drink your troubles away!
+                                 listening party service to discover new friends or connect with old ones.
                         </p>
                     </div>
                 </div>
