--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -10,7 +10,8 @@
 {% block content %}
     <div class="container center-align">
         <div class="row">
-            <h2 class="header center-align">Thank You {{ order.full_name }}</h2>   
+            <h2 class="header center">Thank You</h2>   
+            <h5 class="header center">{{ order.full_name }}</h5>
             <p>Your order({{ order.order_number }}) has been processed.</p>
             <p> A confirmation email will be sent to <b>{{ order.email }}</b>.</p>
             <p>Please see your order information below.</p>
@@ -50,12 +51,12 @@
 							<h5>Order Details:</h5>
 						</div>
 					</div>
-					{% for beer in order.lineitems %}
+					{% for beer in orders.lineitems.all %}
 						<div class="row">
 							<div class="col s12 m8">
-								<p class="small mb-0 text-black font-weight-bold">{{ beer.beer }} - {{ beer.brewery }}</p>
+								<p class="black-text">{{ beer.beer.name }} - {{ beer.brewery.friendly_name }}</p>
 							</div>
-							<div class="col s12 m8 right-align">
+							<div class="col s12 m8 right">
 								<p>{{ beer.quantity }} @ £{{ beer.beer.price }} each</p>
 							</div>
 						</div>
