--- a/checkout/templates/includes/mobile_checkout.html
+++ b/checkout/templates/includes/mobile_checkout.html
@@ -85,12 +85,14 @@
                <fieldset class="co-fieldset-bottom">
                     <legend class="fieldset-label small black-text">Payment</legend>
                     <div>
-                        <!-- A Stripe Element will be inserted here. -->
-                        <div id="card-element"></div>
-                        <!-- Used to display form errors. -->
-                        <div class="red-text" id="card-errors" role="alert"></div>
-                        <!-- Pass the stripe client_secret along so the payment intent id can be added to the order -->
-                        <input type="hidden" value="{{ client_secret }}" name="client_secret">
+                        <div>
+                            <!-- A Stripe Element will be inserted here. -->
+                            <div id="card-element"></div>
+                            <!-- Used to display form errors. -->
+                            <div class="red-text" id="card-errors" role="alert"></div>
+                            <!-- Pass the stripe client_secret along so the payment intent id can be added to the order -->
+                            <input type="hidden" value="{{ intent.client_secret }}" name="client_secret">
+                        </div>
                     </div>
                 </fieldset>
 
