--- a/products/templates/products/beers.html
+++ b/products/templates/products/beers.html
@@ -17,25 +17,29 @@
                 <a class="dropdown-trigger btn btn-pick large modal-trigger red darken-4" href="#" data-target="dropdown3">Styles</a>
 
                 <!-- Dropdown Structure -->
-                <ul id="dropdown3" class="dropdown-content">
+                <div class="input-field col s12">
+                    <ul id="dropdown3" class="dropdown-content">
+                    
+                        {% for style in styles %}
+                            <li><a href="{% url 'beers' %}?styles={{ style.friendly_name }}" class="dropdown-item">{{ style.friendly_name }}</a></li>
+                        {% endfor %}
                 
-                    {% for style in styles %}
-                        <li><a href="{% url 'beers' %}?style={{ style.friendly_name }}" class="dropdown-item">{{ style.friendly_name }}</a></li>
-                    {% endfor %}
-                
-                </ul>   
+                    </ul> 
+                </div>  
             </div>
             <div class="col s12 m4">
                 <a class="dropdown-trigger btn btn-pick large red darken-4" href="#" data-target="dropdown4">Breweries</a>
 
                 <!-- Dropdown Structure -->
-                <ul id="dropdown4" class="dropdown-content">
-                
-                    {% for brewery in breweries %}
-                        <li><a href="{% url 'beers' %}?brewery={{ brewery.friendly_name }}" class="dropdown-item">{{ brewery.friendly_name }}({{ beer.brewery.country }})</a></li>
-                    {% endfor %}
-                
-                </ul>   
+                <div class="input-field col s12">
+                    <ul id="dropdown4" class="dropdown-content">
+                    
+                        {% for brewery in breweries %}
+                            <li><a href="{% url 'beers' %}?breweries={{ brewery.friendly_name }}" class="dropdown-item">{{ brewery.friendly_name }}({{ brewery.country }})</a></li>
+                        {% endfor %}
+                    
+                    </ul>   
+                </div>
             </div>
             <div class="col s12 m4">
                 <a class="dropdown-trigger btn btn-pick large red darken-4" href="#" data-target="dropdown5">Sort By...</a>
@@ -57,7 +61,7 @@
         </div>
 
 
-<!--  -----------------------------------------------------------------------------------------------BEER SORTING-->
+<!--  -----------------------------------------------------------------------------------------------/BEER SORTING-->
 
 <!--  -----------------------------------------------------------------------------------------------BEER LIST-->
 
