--- a/profiles/static/profiles/css/profile.css
+++ b/profiles/static/profiles/css/profile.css
@@ -9,3 +9,23 @@ html {
 .header {
     font-family: 'Sansita Swashed', sans-serif;
 }
+
+.container {
+    max-width: 100vw;
+    padding: 0 4rem;
+}
+
+.mp-btn {
+    margin: 0.5rem 1rem;
+    width: 80%;
+    background-color: #b71c1c;
+    font-family: 'Piazzolla', sans-serif;
+    color: #fff;
+    border: none;
+    height: 2rem;
+    line-height: 1.75;
+}
+
+.mp-btn:hover {
+    background-color: #e53935;
+}
