--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -15,7 +15,7 @@
                 <hr>
             </div>
         </div>
-        {% if grand_total %}
+        {% if grand_total and not on_profile_page %}
             <div class="bag-notification-wrapper row center black-text">    
                 {% for beer in cart_items %}
                     <div class="col s6">
