--- a/static/css/base.css
+++ b/static/css/base.css
@@ -111,10 +111,19 @@ i.right {
 /*--------------------------------------------------------------------------------------------------add beer page*/
 
 textarea {
-    border-bottom: 1px #444 solid;
+    border-bottom: 1px solid #9e9e9e;
     border-top: none;
     border-left: none;
     border-right: none;
+}
+
+#id_image {
+    float: right;
+    padding-top: 1rem;
+}
+
+#div_id_image {
+    padding-bottom: 4rem;
 }
 
 /*--------------------------------------------------------------------------------------------------beers page*/
