added product edit/delete beer functionality along with button links for superusers

--- a/products/templates/products/beer_detail.html
+++ b/products/templates/products/beer_detail.html
@@ -59,6 +59,13 @@
                                 <p><i class="material-icons large">add_shopping_cart</i></p>
                             </button>
                         </div> 
+                        {% if request.user.is_superuser %}
+                            <div class="col s3 center">
+                                <a href="{% url 'edit_beer' beer.id %}" ><i class="small green-text material-icons">edit</i></a>
+                                
+                                <a href="{% url 'delete_beer' beer.id %}" ><i class=" small red-text material-icons">delete</i></a>
+                            </div>
+                        {% endif %}
                     </form>
                 </div>
                 <hr>
